# smc-hello-world

./: CMakeLists.txt  README.md  prj.conf  west.yml
boards/: ast1030_evb.overlay
docs/: contributing.md
redfish/oem_csdl/: software_inventory.xml
redfish/truncated_json_profiles/: software_inventory.json
src/: dictionary.c  oem.c  platform.c  platform.h  platform_cfg.h  rde_resources.c  rde_resources.h  redfish_runtime_info.c  thermal_config.c  wd_reset.c
